# rinha-de-backend-2024-q1

./: .gitignore  LICENSE  README.md  aliases.sh  docker-compose.yml  push_images.sh
app/: CMakeLists.txt  Dockerfile  config.json  format.sh
app/drogon/: Dockerfile  Makefile
app/src/: main.cc  main.cpp
app/src/controllers/: RinhaController.cc  RinhaController.h
app/src/models/: Clientes.cc  Clientes.h  README.md  Transacoes.cc  Transacoes.h  model.json
nginx/: Dockerfile  nginx.conf
participantes/ramosfabiano/: README.md
postgres/: Dockerfile  Dockerfile.1  Dockerfile.2  config.sql  create-table-1.sql  create-table-2.sql  create-table.sql  init-table-1.sql  init-table-2.sql  vars.env
redis/: Dockerfile  redis.conf
stress_test/: executar-teste-local.sh  install_gatling.sh
